# singalong

./: ProjectHome.md
installer/: build.lua  config.wxs  helpers.lua  replace.lua  vars.wxs  version.wxs
installer/ui/: CustomizeDlg.wxs  ExitDialog.wxs  MyWixUI_FeatureTree.wxs  ServerDlg.wxs  WelcomeDlg.wxs  WixUI_InstallDir.wxs  build_VVCR.bat
source/cd/: cdlua_module.c
source/im/: CMakeLists.txt
source/lfs/: ReadMe.txt  lfs.vcproj
source/libharu/: ReadMe.txt
source/libharu/lib_dll/: libhpdf.exp
source/lmarshal/: lmarshal.h  lmarshal.vcproj
source/lpack/: lpack.c  lpack.vcproj
source/lua5.1/: lua5.1.vcproj
source/lua5.1/include/: Makefile
source/luasocket/: mime.vcproj  socket.vcproj
source/luasocket/src/: socket.exp
source/main/: UpgradeLog.XML  main.cpp  main.sln  main.vcproj
source/singalong/: clipboard.cpp  clipboard.h  lua_compare.h  lua_libharu.cpp  lua_libharu.h  lua_libharupage.cpp  lua_libharupage.h  lua_system.cpp  lua_system.h  singalong.cpp  singalong.vcproj  stdafx.cpp  stdafx.h
source/zlib/: Makefile
trunk/installer/: build.lua  miktex.wxs  singalong.wxs
trunk/installer/ui/: Common.wxs  License.rtf  LicenseAgreementDlg.wxs  ServerOrClientDlg.wxs  build.bat  build.lua
trunk/source/cd/: CMakeLists.txt  dist.info
trunk/source/im/: dist.info
trunk/source/im/src/lua5/: imlua_module.c
trunk/source/lfs/: CMakeLists.txt
trunk/source/libharu/: libharu.vcproj
trunk/source/libharu/src/: hpdf_image_ccitt.c
trunk/source/libharu_make/: invoke_cmake.sh
trunk/source/lmarshal/: Makefile  lmarshal.c  lmarshal.h  lmarshal.vcproj
trunk/source/lpng1510/projects/visualc71/: libpng.vcproj  zlib.vcproj
trunk/source/lpng_make/: lpng_cmake.sh
trunk/source/lua5.1/: lua5.1.vcproj
trunk/source/luasocket/: CMakeLists.txt  make_with_lua.sh
trunk/source/luasocket/src/: makefile  mime.exp  mime.lib  socket.lib
trunk/source/luatask/: task.vcproj
trunk/source/main/: UpgradeLog2.XML  main.sln
trunk/source/singalong/: PdfDoc.cpp  PdfDoc.h  ReadMe.txt  Resource.h  clipboard.cpp  forcelib.h  global.h  lua_compare.cpp  lua_libharu.cpp  lua_libharupage.h  lua_system.cpp  lua_system.h  lua_system_lin.cpp  lua_system_win.cpp  singalong.cpp  singalong.rc  singalong.vcproj
